Home.tsx Sección Nuestros Servicios con imágenes, con redirección y con modal para favoritos

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -284,3 +284,7 @@
   color: darkred; /* Hover para mayor interactividad */
 }
 /*====== Fin corazon favoritos ====== */
+
+.service-card img {
+  cursor: pointer;
+}
